[package]
name = "tsp-rust"
version = "0.1.0"
authors = ["Michael Gilbert <gilbertm@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"

[dev-dependencies]
itertools = "0.10.0"
criterion = "0.3.0"
rand_chacha = "0.3.0"

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

[[bench]]
name = "tsp"
harness = false
